Fix images and wrap them

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,8 +3,20 @@
   margin: 0px;
 }
 
-p, h1, h2, h3, h4, h5, h6 {
+p, h1, h2, h3, h4, h5, h6, li, td, th {
   color: #33251e;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Futura";
+}
+
+p, li, td, th {
+  font-family: "New Baskerville" "Baskerville" serif;
+}
+
+li {
+  margin-left: 2.5em;
 }
 
 a {
@@ -21,6 +33,8 @@ img {
 
 .caption {
   text-align: center;
+  font-size: 12pt;
+  margin-bottom: 20px;
 }
 
 html {
@@ -46,6 +60,7 @@ html {
 header {
   display: block;
   float: left;
+  border-bottom: 2px solid #33251e;
 }
 
 #icon {
@@ -57,7 +72,6 @@ header {
 
 header > h1 {
   float: left;
-  font-family: "Futura";
   font-size: 24pt;
   color: #33251e;
   padding-top: 15px;
@@ -92,7 +106,6 @@ nav {
   float: left;
   position: block;
   text-align: center;
-  border-top: 2px solid #33251e;
   border-bottom: 2px solid #33251e;
 
 }
@@ -113,19 +126,21 @@ nav {
 }
 
 main {
-  /*display: inline-block;*/
   clear: left;
-  padding-top: 30px;
 }
 
 main p {
-  font-family: "New Baskerville" "Baskerville" serif;
   font-size: 14pt;
+  margin-bottom: 10px;
 }
 
 main h2 {
-  font-family: "Futura";
   padding-bottom: 5px;
   font-size: 20pt;
 
+}
+
+main h3 {
+  padding-bottom: 5px;
+  font-size: 16pt;
 }
